# pdf-extractor-cli

./: .gitignore  LICENSE  README.md  merge_chunks.py  pdf_extractor_cli.py  pyproject.toml  requirements.txt
pdf_extractor/: __init__.py  image_extractor.py  main.py  ocr_extractor.py  table_extractor.py  text_extractor.py  utils.py
