[tool.poetry]
name = "pdf-extractor-cli"
version = "0.1.0"
description = "A CLI tool to extract data from PDF files"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "pdf_extractor"}]

[tool.poetry.dependencies]
python = "^3.11"
PyMuPDF = "^1.21.1"
pdfplumber = "^0.9.0"
pandas = "^2.0.3"
pytesseract = "^0.3.10"
Pillow = "^10.0.1"
rich = "^13.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pdf-extractor-cli = "pdf_extractor.main:main" 